--- a/settings.ini
+++ b/settings.ini
@@ -25,4 +25,4 @@ doc_baseurl = /hmckd/
 git_url = https://github.com/moarshy/hmckd/tree/master/
 lib_path = hmckd
 tst_flags = ignoretest
-requirements = nbdev fastcore fastai dtreeviz
+requirements = nbdev fastcore fastai==2.4 dtreeviz
