--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,7 +10,7 @@ use_math: true
 google_analytics:
 # See http://nbdev.fast.ai/search for help with adding Search
 google_search:
-
+default_badges: {colab: true}
 host: 127.0.0.1
 # the preview server used. Leave as is.
 port: 4000
